--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "@supabase/supabase-js": "^2.80.0",
     "@tailwindcss/vite": "^4.1.17",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
