--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@supabase/supabase-js": "^2.80.0",
     "@tailwindcss/vite": "^4.1.17",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
