--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.2.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
