--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.3",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
+    "@types/qrcode": "^1.5.6",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
