--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "html2canvas": "^1.4.1",
     "pinia": "^3.0.4",
     "qrcode": "^1.5.4",
     "tailwindcss": "^4.1.17",
@@ -22,6 +23,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^24.6.0",
     "@types/qrcode": "^1.5.6",
     "@vitejs/plugin-vue": "^6.0.1",
