--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "dom-to-image-more": "^3.7.2",
     "html2canvas": "^1.4.1",
     "pinia": "^3.0.4",
     "qrcode": "^1.5.4",
