--- a/hackatonProyecto/package.json
+++ b/hackatonProyecto/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.1",
     "dom-to-image-more": "^3.7.2",
     "html2canvas": "^1.4.1",
+    "marked": "^17.0.0",
     "pinia": "^3.0.4",
     "qrcode": "^1.5.4",
     "tailwindcss": "^4.1.17",
